--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    color: limegreen;
+    color: rgb(0, 255, 0);
     font-family: 'VT323', monospace;
     font-size: 24px;
 }
@@ -13,7 +13,7 @@ body {
 .maindiv {
     width: 95%;
     margin: 0 auto;
-    margin-top: 100px;
+    margin-top: 25px;
 }
 
 .maindiv h1 {
@@ -21,48 +21,58 @@ body {
     margin-bottom: 20px;
 }
 
-.question {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    height: 50px;
-}
-
-.question p {
-    flex-grow: 1;
-    font-size: 20px;
-    font-weight: 600;
-    display: inline-block;
-    text-align: center;
-}
-
-.question input {
-    display: inline-block;
-    max-width: 50vw;
-    width: 80%;
-    flex-grow: 5;
-}
-
 #submit {
-    margin-left: calc(50% - 75px);
-    margin-top: 20px;
     display: inline-block;
-    width: 150px;
-    height: 50px;
-    font-size: 20px;
+    width: 250px;
+    height: 80px;
+    font-size: 35px;
+    background-color: black;
+    border: 5px solid rgb(0, 255, 0);
 }
 
-#result {
-    margin: 0 auto;
-    text-align: center;
-    max-width: 80vw;
-    font-size: 30px;
-    font-weight: 600;
+#calculating {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+#submit:hover {
+    background-color: rgb(0, 50, 0);
+    cursor: pointer;
+}
+
+#submit:active {
+    background-color: rgb(0, 100, 0);
+}
+
+#randomEvent {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.eventhr {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-top: 2px solid rgb(0, 255, 0);
+    width: 100%;
 }
 
 .moonList {
     width: 25%;
-    margin: 0 auto;
+    border: 2px solid rgb(0, 255, 0);
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+
+#submit.noInteract:hover {
+    cursor: not-allowed;
+}
+
+#submit.noInteract {
+    background-color: black;
+    border: 5px solid rgb(0, 100, 0);
+    color: rgb(0, 100, 0);
 }
 
 @keyframes flicker {
